force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <description>Inbound material receipt header. Lines in Receipt_Line__c. Three-way match against Vendor_PO__c.</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RCV-{YYYY}-{0000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>