force-app/main/default/objects/Receipt__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts_Received</relationshipName>
    <type>Lookup</type>
</CustomField>