force-app/main/default/objects/Receipt__c/fields/Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PO__c</fullName>
    <label>Vendor PO</label>
    <referenceTo>Vendor_PO__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>